<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pablochamorro.practicasupm.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_my_account"
        android:name="com.pablochamorro.practicasupm.ui.calendar.CalendarFragment"
        android:label="@string/menu_my_account"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.pablochamorro.practicasupm.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_my_subjects"
        android:name="com.pablochamorro.practicasupm.ui.practica.PracticaFragment"
        android:label="@string/menu_close_session"
        tools:layout="@layout/fragment_practica" />
</navigation>